--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,15 @@
 [build-system]
-requires = ["hatchling"]
+requires = ["hatchling", "hatch-vcs"]
 build-backend = "hatchling.build"
+
+[tool.hatch.version]
+source = "vcs"
+version-scheme = "node"
+
 
 [project]
 name = "rpaworkflow"
-version = "0.0.1"
+# version = "0.0.2"
 description = "RPA工作流框架，支持多种自动化工具的工作流管理和节点执行"
 readme = "README.md"
 requires-python = ">=3.11"
@@ -25,6 +30,7 @@ classifiers = [
 dependencies = [
     "loguru",
 ]
+dynamic = ["version"]
 
 [project.urls]
 "Homepage" = "https://github.com/yourusername/rpaworkflow"
